Tooltip is shown doubly on hover over the maximize button
Categories
(Firefox :: Theme, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr78 | --- | unaffected |
| firefox-esr91 | --- | unaffected |
| firefox92 | --- | unaffected |
| firefox93 | --- | unaffected |
| firefox94 | + | verified |
| firefox95 | --- | verified |
People
(Reporter: emk, Assigned: cmartin)
References
(Regression)
Details
(Keywords: regression)
Attachments
(3 files, 1 obsolete file)
|
8.81 KB,
image/png
|
Details | |
|
48 bytes,
text/x-phabricator-request
|
RyanVM
:
approval-mozilla-beta+
|
Details |
|
48 bytes,
text/x-phabricator-request
|
RyanVM
:
approval-mozilla-beta+
|
Details |
Steps to reproduce:
Hover the mouse cursor over the maximize button.
Actual result:
On Windows 10, two "Maximize" tooltips are shown.
On Windows 11, both tooltip and Snap Layouts menu will be shown.
Expected result:
Only single tooltip or Snap Layouts menu should be shown.
We should stop showing "Maximize" tooltip on our own. The operating system will do it for us.
Comment 1•4 years ago
|
||
Screenshot of Nightly94.0a1 en-US build on Windows10 Home Japanese Lang pack.
Yes, double tootip 最大化 and Maximize.
Updated•4 years ago
|
Comment 2•4 years ago
|
||
Set release status flags based on info from the regressing bug 1729742
Updated•4 years ago
|
Comment 3•4 years ago
|
||
Since bug 1718629, Gecko has used Windows behavior around the maximize button, in order to support Windows 11's snap layouts view. The Windows behavior always shows a Maximize tooltip on that button so Gecko's tooltip was making for two Maximize tooltips.
Updated•4 years ago
|
Comment 4•4 years ago
|
||
Windows will show the tooltips for these buttons so we don't want to also show Gecko's.
Depends on D125625
Updated•4 years ago
|
| Assignee | ||
Comment 5•4 years ago
|
||
Taking over this bug because David Parks is away indefinitely
Comment 7•4 years ago
|
||
| bugherder | ||
https://hg.mozilla.org/mozilla-central/rev/35fc365ef200
https://hg.mozilla.org/mozilla-central/rev/231dfa18e7e8
Comment 8•4 years ago
|
||
Hi Chris, is this ready for a Beta approval nomination?
| Assignee | ||
Comment 9•4 years ago
|
||
Comment on attachment 9241254 [details]
Bug 1730309: Part 1 - Use Windows behavior for minimize and close buttons r=emk!,emilio!
Beta/Release Uplift Approval Request
- User impact if declined: Maximize button will continue to show double-tooltip
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Most of the risk from this comes from its lack of automated testing, and the fact that it does represent a change in how we handle the min/max/close buttons. But it seems like if it was going to fail basic sanity than it would be obvious quickly, so that's why the risk still seems pretty low.
- String changes made/needed:
| Assignee | ||
Updated•4 years ago
|
Updated•4 years ago
|
Comment 10•4 years ago
|
||
Comment on attachment 9241254 [details]
Bug 1730309: Part 1 - Use Windows behavior for minimize and close buttons r=emk!,emilio!
Approved for 94.0b4. Given that this is already a regression fix from previous work and we have minimal test coverage, I think we should get additional QA testing around this, however.
Updated•4 years ago
|
Comment 11•4 years ago
|
||
| bugherder uplift | ||
Updated•4 years ago
|
Comment 12•4 years ago
|
||
Reproduced the issues described in comment 0, on both, Win 10 x64 and Win 11 using an affected Nightly build (94.0a1 2021-09-10).
The issue is not reproducible anymore on the latest builds running Win 10: Nightly 95.0a1 and Beta 94.0b4.
On Win 11, it seems that the tooltip is still shown while slowly hovering over the maximize button, as seen in this screencast. This was checked with 94.0b4 en-US build, with Japanese lang pack installed and set as primary language. Can you please take a look at this, Chris?
Comment 13•4 years ago
|
||
(In reply to Ciprian Georgiu [:ciprian_georgiu], Release Desktop QA from comment #12)
On Win 11, it seems that the tooltip is still shown while slowly hovering over the maximize button, as seen in this screencast. This was checked with 94.0b4 en-US build, with Japanese lang pack installed and set as primary language. Can you please take a look at this, Chris?
I do not see this issue on Windows 11 using English. This is almost certainly something unexpected with the localization. Filed as bug 1735209.
| Reporter | ||
Comment 14•4 years ago
•
|
||
(In reply to Ciprian Georgiu [:ciprian_georgiu], Release Desktop QA from comment #12)
On Win 11, it seems that the tooltip is still shown while slowly hovering over the maximize button, as seen in this screencast. This was checked with 94.0b4 en-US build, with Japanese lang pack installed and set as primary language. Can you please take a look at this, Chris?
Could you attach the screencast to Bugzilla or anywhere visible from non-Mozilla-employees?
| Comment hidden (obsolete) |
Comment 16•4 years ago
|
||
Comment on attachment 9245350 [details]
screencast from comment 12
I attached the screencast to bug 1735209.
Comment 17•4 years ago
|
||
(In reply to David Parks [:handyman] from comment #13)
I do not see this issue on Windows 11 using English. This is almost certainly something unexpected with the localization. Filed as bug 1735209.
Thanks. Yes, I can also confirm that the issue is not present when running Windows 11 English version. Tested with latest Nightly 95.0a1 and Beta 94.0b4.
I'm going to close this bug as verified fixed per this comment, and my previous one.
Comment 18•4 years ago
|
||
I think the OS tooltip is pretty bad on Windows 10. It's yellow, it can't be customized profitably without a lot of hackery, it disappears after like 3-5 seconds, it doesn't obey any of the internal settings like ui.tooltipDelay and it has a fade transition inconsistent with Firefox's DOM tooltips. I understand the other changes but why use the OS tooltip when tabsintitlebar is enabled and every other element in the chrome window with a tooltip uses a DOM tooltip or the generic native-anonymous one?
Updated•4 years ago
|
Description
•