Bug 1730309: Part 1 - Use Windows behavior for minimize and close buttons r=emk,emilio

Bug 1718629 did this for the maximize button.  This patch does the same for minimize and close, which we are switching to for consistent tooltip styling.

Differential Revision: https://phabricator.services.mozilla.com/D125625